kube/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: mutclip
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: aantonm/mutclip:client
          resources:
            requests:
              memory: 150Mi
              cpu: 250m
            limits:
              memory: 150Mi
              cpu: 250m
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockerconfig
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: mutclip
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
