kube/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: mutclip
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: aantonm/mutclip:server
          resources:
            requests:
              memory: 50Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 100m
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockerconfig
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: mutclip
spec:
  selector:
    app: server
  ports:
    - port: 5000
      targetPort: 5000
